Uso do List.of ao invés do asList